RancherTraining/K8sProjects/wordpress/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: wp-522
spec:
  selector:
    app: wp-522
  ports:
    - name: main
      protocol: TCP
      port: 80
      targetPort: 80
